[Refactor] Restructure to Enable DI in ToolWindowFactory and Remove Singleton Pattern